# LearnOpenGLAndroid

./: .gitignore  README.md  settings.gradle
lessons/lesson1/: CMakeLists.txt  build.gradle
lessons/lesson1/src/androidTest/java/com/learnopengl/lesson1/: ExampleInstrumentedTest.java
lessons/lesson1/src/main/: AndroidManifest.xml
lessons/lesson1/src/main/cpp/: lesson1.cpp
lessons/lesson1/src/main/java/com/learnopengl/lesson1/: GL2JNIView.java  MainActivity.java  Renderer.java
lessons/lesson1/src/test/java/com/learnopengl/lesson1/: ExampleUnitTest.java
lessons/lesson2/: CMakeLists.txt  build.gradle  proguard-rules.pro
lessons/lesson2/src/androidTest/java/com/leanopengl/lesson2/: ExampleInstrumentedTest.java
lessons/lesson2/src/main/: AndroidManifest.xml
lessons/lesson2/src/main/cpp/: lesson2.cpp
lessons/lesson2/src/main/java/com/leanopengl/lesson2/: GL2JNIView.java  MainActivity.java  Renderer.java
lessons/lesson2/src/test/java/com/leanopengl/lesson2/: ExampleUnitTest.java
lessons/lesson4/: CMakeLists.txt  build.gradle
lessons/lesson4/src/androidTest/java/com/leanopengl/lesson4/: ExampleInstrumentedTest.java
lessons/lesson4/src/main/: AndroidManifest.xml
lessons/lesson4/src/main/cpp/: lesson4.cpp
lessons/lesson4/src/main/java/com/leanopengl/lesson4/: GL2JNIView.java  (+2 more)
lessons/lesson4/src/main/res/layout/: activity_main.xml
lessons/lesson5/: CMakeLists.txt  build.gradle
lessons/lesson5/src/main/: AndroidManifest.xml
lessons/lesson5/src/main/cpp/: lesson5.cpp
lessons/lesson5/src/main/res/layout/: activity_main.xml
lessons/lesson5/src/main/res/values/: strings.xml
(+16 files in other folders)
